--- a/mycart.html
+++ b/mycart.html
@@ -12,9 +12,9 @@
    
     <div class="shopname">
         <h1>Crafts By M & J</h1>
-        <div class="mycart"><button  class="btn"><a href="/mycart.html"><img src="./assets/shopping-cart.png" alt="cart">&nbsp;</a></button></div>
+        <div class="mycart"><button  class="btn"><a href="/mycart"><img src="./assets/shopping-cart.png" alt="cart">&nbsp;</a></button></div>
     <div class="header">
-        <div class="home"><button  class="btn"> <a href="/index.html">Go back to Home</a></button></div>
+        <div class="home"><button  class="btn"> <a href="/">Go back to Home</a></button></div>
         
     </div>
     
