--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Crafts By M & J</h1>
         <div class="mycart">
             <button  class="btn" >
-                <a href="/mycart" >&nbsp;
+                <a href="mycart.html" >&nbsp;
             <img src="./assets/shopping-cart.png" alt="cart">
             <span id="itemNum"></span>
                </a>
