Updayte cart to homepage

--- a/mycart.html
+++ b/mycart.html
@@ -14,7 +14,7 @@
         <h1>Crafts By M & J</h1>
         <div class="mycart"><button  class="btn"><a href="/mycart"><img src="./assets/shopping-cart.png" alt="cart">&nbsp;</a></button></div>
     <div class="header">
-        <div class="home"><button  class="btn"> <a href="/">Go back to Home</a></button></div>
+        <div class="home"><button  class="btn"><a href="index.html">Go back to Home</a></button></div>
         
     </div>
     
